messing with favorites

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<courses></courses>
-<authors></authors>
-<favorite></favorite>
-<title-case></title-case>
+<h1>Hello Typescript!</h1>
+<favorite [isFavorite]="post.favorite" (change)="onFavoriteChanged($event)"></favorite>
+
