--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
 <h1>Hello Typescript!</h1>
-<favorite [isFavorite]="post.favorite" (change)="onFavoriteChanged($event)"></favorite>
 
+<bootstrap-panel>
+    <ng-container class="heading">Heading</ng-container>
+    <div class="body">
+        <h2>Body</h2>
+        <p>Some content...</p>
+    </div>
+</bootstrap-panel>
