--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,5 @@
 <h1>Hello Typescript!</h1>
 
-<bootstrap-panel>
-    <ng-container class="heading">Heading</ng-container>
-    <div class="body">
-        <h2>Body</h2>
-        <p>Some content...</p>
-    </div>
-</bootstrap-panel>
+<like
+    [likesCount] = "tweet.likesCount"
+    [isActive] = "tweet.isLiked"></like>
