--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
 <h1>Hello Typescript!</h1>
 
-<like
-    [likesCount] = "tweet.likesCount"
-    [isActive] = "tweet.isLiked"></like>
+<div *ngIf="courses.length > 0; then coursesList else noCourses"></div>
+<ng-template #coursesList>
+    List of  courses
+</ng-template>
+<ng-template #noCourses>
+    No courses yet.
+</ng-template>
