--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,12 @@
 <h1>Hello Typescript!</h1>
 
-<div *ngIf="courses.length > 0; then coursesList else noCourses"></div>
-<ng-template #coursesList>
-    List of  courses
-</ng-template>
-<ng-template #noCourses>
-    No courses yet.
-</ng-template>
+<ul class="nav nav-pills">
+    <li [class.active]="viewmode == 'map'"><a (click)="viewMode = 'map'">Map View</a></li>
+    <li [class.active]="viewmode == 'list'"><a (click)="viewMode = 'list'">List View</a></li>
+</ul>
+
+<div [ngSwitch]="viewMode">
+    <div *ngSwitchCase="'map'">Map View Content</div>
+    <div *ngSwitchCase="'list'">List View Content</div>
+    <div *ngSwitchDefault>Otherwise</div>
+</div>
