--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,10 @@
 <h1>Hello Typescript!</h1>
 
-<ul class="nav nav-pills">
-    <li [class.active]="viewmode == 'map'"><a (click)="viewMode = 'map'">Map View</a></li>
-    <li [class.active]="viewmode == 'list'"><a (click)="viewMode = 'list'">List View</a></li>
+<button (click)="loadCourses()">Load Courses</button>
+<button (click)="onAdd()">Add</button>
+<ul>
+    <li *ngFor="let course of courses; even as isEven; trackBy: trackCourse">
+        {{ course.name }} <span *ngIf="isEven">(EVEN)</span>
+        <button (click)="onRemove(course)">Remove</button>
+    </li>
 </ul>
-
-<div [ngSwitch]="viewMode">
-    <div *ngSwitchCase="'map'">Map View Content</div>
-    <div *ngSwitchCase="'list'">List View Content</div>
-    <div *ngSwitchDefault>Otherwise</div>
-</div>
