added collapsible component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,3 @@
-<h1>Hello Typescript!</h1>
-
-<button (click)="loadCourses()">Load Courses</button>
-<button (click)="onAdd()">Add</button>
-<ul>
-    <li *ngFor="let course of courses; even as isEven; trackBy: trackCourse">
-        {{ course.name }} <span *ngIf="isEven">(EVEN)</span>
-        <button (click)="onRemove(course)">Remove</button>
-    </li>
-</ul>
-
-<p>
-    <input type="text" [appInputFormat]="'uppercase'">
-</p>
+<zippy title="Shipping Details">
+    Shipping Details Content
+</zippy>
