--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<zippy title="Shipping Details">
-    Shipping Details Content
-</zippy>
+<div class="col-md-3">
+    <contact-form></contact-form>
+</div>
