--- a/src/app/github-profile/github-profile.component.html
+++ b/src/app/github-profile/github-profile.component.html
@@ -3,6 +3,7 @@
 </p>
 <button 
   [routerLink]="['/followers', 1234]"
-  class="btn btn-primary">
-  Next
+  class="btn btn-primary"
+  (click)="submit()">
+  Submit
 </button>
